RESOLVED FIXED 225922
[WPE] Spatial navigation tests fail with async overflow scrolling enabled
https://bugs.webkit.org/show_bug.cgi?id=225922
Summary [WPE] Spatial navigation tests fail with async overflow scrolling enabled
Chris Lord
Reported 2021-05-18 09:42:11 PDT
These spatial navigation tests fail since enabling async overflow scrolling in tests in WPE: fast/spatial-navigation/snav-clipped-overflowed-content.html fast/spatial-navigation/snav-only-clipped-overflow-content.html fast/spatial-navigation/snav-simple-content-overflow.html Debugging with alexg, we discovered that this was because of clipping being disabled when async compositing is used at the RenderBox level. This leads us to believe that this issue may not be WPE-specific. Patch incoming.
Attachments
Patch (48.60 KB, patch)
2021-05-18 09:54 PDT, Chris Lord
no flags
Patch (6.58 KB, patch)
2021-05-20 11:12 PDT, Chris Lord
no flags
Chris Lord
Comment 1 2021-05-18 09:54:33 PDT
Simon Fraser (smfr)
Comment 2 2021-05-18 10:04:50 PDT
Comment on attachment 428949 [details] Patch I would prefer this happen in two stages: the first should just bet the clippedOverflowRect changes, and the second, smaller patch would fix spatial navigation.
Chris Lord
Comment 3 2021-05-20 11:12:40 PDT
EWS
Comment 4 2021-05-20 17:24:41 PDT
Committed r277840 (237984@main): <https://commits.webkit.org/237984@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429194 [details].
Radar WebKit Bug Importer
Comment 5 2021-05-20 17:25:22 PDT
Note You need to log in before you can comment on or make changes to this bug.