[WPE] Spatial navigation tests fail with async overflow scrolling enabled https://bugs.webkit.org/show_bug.cgi?id=225922

Reviewed by Simon Fraser.

Source/WebCore:

Add absoluteClippedOverflowRectForSpatialNavigation for when the
clipped overflow rect not taking into account composited scrolling is
necessary.

No new tests, covered by existing tests.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::isOffScreen const):
* page/SpatialNavigation.cpp:
(WebCore::hasOffscreenRect):
* rendering/RenderObject.h:
(WebCore::RenderObject::absoluteClippedOverflowRectForSpatialNavigation const):
(WebCore::RenderObject::visibleRectContextForSpatialNavigation):

LayoutTests:

Some spatial navigation tests now pass on WPE.

* platform/wpe/TestExpectations:


Canonical link: https://commits.webkit.org/237984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277840 268f45cc-cd09-0410-ab3c-d52691b4dbfc